[add] basic html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,55 @@
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <title>joko's portfolio</title>
-  </head>
-  <body>
-  </body>
+	<head>
+		<meta charset='utf-8'>
+		<title>joko's portfolio</title>
+		<link rel="stylesheet" type="text/css" type="css/syle.css">
+	</head>
+	<body>
+		<header>
+			<h1 class="headline">
+				<a>Joko's portfolio</a>
+			</h1>
+		</header>
+
+		<div class="title-main">
+			<h1>Joko's portfolio</h1>
+			<h2>へっぽこプログラマー</h2>
+		</div>
+
+		<div class="profile">
+			<h2>Profile</h2>
+			<ul>
+				<li>静岡大学 情報学部情報科学科B3(23卒)</li>
+				<li>2000/04/13生まれ</li>
+				<li>静岡大学漕艇部 所属</li>
+				<li>最近は馬の娘にお熱</li>
+			</ul>
+		</div>
+
+		<div class="works">
+			<h2>Works</h2>
+			<ul>
+				<li>
+					<h3>VR Speed Run</h3>
+
+				</li>
+				<li>
+					<h3>Shiha's Great Adventure</h3>
+				</li>
+			</ul>
+		</div>
+		<div class="activity">
+			<ul>
+				<li>基本情報技術者試験 合格</li>
+			</ul>
+		</div>
+		<div class="contacts">
+			<ul>
+				<li class="github"></li>
+				<li class="twitter"></li>
+				<li class="mail"></li>
+				<li class="hatena"></li>
+			</ul>
+		</div>
+	</body>
 </html>
