--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<title>joko</title>
+	<link rel="icon" href="img/siteicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/header.css">
 	<link rel="stylesheet" type="text/css" href="css/portfolio-title.css">
