--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
 			<h2 class="section-title">Activity</h2>
 			<ul>
 				<li>基本情報技術者試験 合格</li>
+				<li>2019年 9月 ISUCON9 チーム仮想猿さんに愛を込めてウキキ！（ガハハ！）予選参加</li>
+				<li>2020年 4月 危機管理コンテスト チームSawayaka-sec B予選参加</li>
+				<li>2020年 5月 Seccon Beginners CTF 2020参加</li>
+				<li>2020年 9月 ISUCON10 チームinstant instances 予選参加</ul>
+				<li>2021年 5月 危機管理コンテスト チームITSawayaka B 予選参加</li>
 			</ul>
 		</div>
 	</div>
